syntax = "proto3";
option csharp_namespace = "ProfileGrpc";
package profile;
service UserService {
  rpc CreateUser (CreateUserRequestGrpc) returns (CreateUserResponseGrpc);
}

message CreateUserRequestGrpc {
  string id = 1;
  string email = 2;
}

message CreateUserResponseGrpc {
  string message = 1;
}